--- a/css/stylis.css
+++ b/css/stylis.css
@@ -12,7 +12,7 @@
   --white: #ffffff;
   --dairy: #fcfcfc;
 }
-body {
+.body {
   font-family: "Raleway", sans-serif;
   font-family: "Roboto", sans-serif;
   background-color: var(--brand-color4);
@@ -46,7 +46,7 @@ ol {
   margin-top: 0;
   margin-bottom: 0;
 }
-img {
+.img {
   display: block;
 }
 .visually-hidden {
@@ -61,7 +61,7 @@ img {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-button {
+.button {
   font-family: inherit;
   cursor: pointer;
 }
@@ -508,6 +508,51 @@ button {
 .footer-item-icons {
   fill: #f4f4fd;
 }
+.footer-form {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer-form-text {
+  color: var(--white, #fff);
+  /* Body Medium */
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  margin-bottom: 16px;
+}
+.footer-input {
+  width: 264px;
+  height: 40px;
+  flex-shrink: 0;
+  padding-left: 16px;
+  padding-right: 16px;
+  border-radius: 4px;
+  border: 1px solid var(--white, #fff);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  background: var(--navyblue, #2e2f42);
+  background-color: transparent;
+  margin-right: 24px;
+}
+.footer-input::placeholder {
+  color: var(--white, #fff);
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+}
+.footer-btn {
+  min-width: 165px;
+  height: 40px;
+  border: none;
+  display: inline-flex;
+  padding: 8px 24px;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  border-radius: 4px;
+  background: var(--iris, #4d5ae5);
+}
 
 /*--------------------MODAL-----------------------*/
 
@@ -533,6 +578,7 @@ button {
   box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
     0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 72px 24px 24px 24px;
 }
 .modal-close-btn {
   position: absolute;
@@ -566,6 +612,124 @@ button {
   visibility: hidden;
   pointer-events: none;
 }
+.modal-field {
+  margin-bottom: 8px;
+}
+.modal-title {
+  color: var(--navyblue, #2e2f42);
+  text-align: center;
+  /* Body Medium */
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  margin-bottom: 16px;
+}
+.modal-input {
+  width: 100%;
+  height: 58px;
+  background-color: transparent;
+  border-radius: 4px;
+  border: 1px solid var(--navyblue-modal, rgba(46, 47, 66, 0.4));
+
+  padding-left: 38px;
+  padding-right: 16px;
+  font-size: 14px;
+  outline: transparent;
+  transition: border-color 200ms ease;
+}
+.modal-input:focus {
+  border-color: #4d5ae5;
+}
+.modal-input:focus + .modal-icon {
+  fill: #4d5ae5;
+}
+.modal-input::placeholder {
+  font-size: 14px;
+}
+.modal-input:required {
+  border-width: 2px;
+}
+.modal-label {
+  font-size: 14px;
+  margin-bottom: 4px;
+  display: block;
+}
+.modal-input-wrap {
+  position: relative;
+}
+.modal-icon {
+  fill: transparent;
+  stroke: #2e2f42;
+  position: absolute;
+  left: 8px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill 200ms ease;
+}
+.modal-comment {
+  width: 100%;
+  height: 120px;
+  background-color: transparent;
+  border-radius: 4px;
+  border: 1px solid var(--navyblue-modal, rgba(46, 47, 66, 0.4));
+  padding: 8px 16px;
+  font-size: 14px;
+  outline: transparent;
+  transition: border-color 200ms ease;
+  resize: none;
+}
+.modal-check-text {
+  color: var(--lightslate, #8e8f99);
+  /* Small Text */
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04;
+  display: flex;
+  align-items: center;
+}
+.modal-check-link {
+  color: var(--iris, #4d5ae5);
+  /* Link Text */
+  font-size: 12px;
+  line-height: 1.3;
+  letter-spacing: 0.04;
+}
+.modal-check-text span {
+  width: 16px;
+  height: 16px;
+  border-radius: 4px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  margin-right: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
+  transition-duration: 300ms;
+}
+.modal-check:checked + .modal-check-text span {
+  background-color: #4d5ae5;
+  border: none;
+  fill: #ffffff;
+}
+.modal-check:focus + .modal-check-text span {
+  border-color: #4d5ae5;
+}
+.modal-form-btn {
+  width: 169px;
+  height: 56px;
+  flex-shrink: 0;
+  border-radius: 4px;
+  background: var(--dairy, #fcfcfc);
+  display: inline-flex;
+  padding: 16px 32px;
+  align-items: center;
+  gap: 10px;
+  border-radius: 4px;
+  background: var(--iris, #4d5ae5);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+}
+
 /***------------PORTFOLIO-------------*/
 
 /**-----------------GALERY-----------*/
