--- a/css/stylis.css
+++ b/css/stylis.css
@@ -552,6 +552,7 @@ ol {
   gap: 16px;
   border-radius: 4px;
   background: var(--iris, #4d5ae5);
+  color: var(--white, #fff);
 }
 
 /*--------------------MODAL-----------------------*/
@@ -721,7 +722,7 @@ ol {
   flex-shrink: 0;
   border-radius: 4px;
   background: var(--dairy, #fcfcfc);
-  display: inline-flex;
+  display: flex;
   padding: 16px 32px;
   align-items: center;
   gap: 10px;
