--- a/css/stylis.css
+++ b/css/stylis.css
@@ -526,9 +526,7 @@ ol {
 .footer-input {
   width: 264px;
   height: 40px;
-  flex-shrink: 0;
   padding-left: 16px;
-  padding-right: 16px;
   border-radius: 4px;
   border: 1px solid var(--white, #fff);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
@@ -549,19 +547,20 @@ ol {
 .footer-btn .btn {
   min-width: 165px;
   height: 40px;
-  border: none;
   display: flex;
-  font-family: "Roboto", sans-serif;
-  padding: 8px 24px;
   justify-content: center;
   align-items: center;
-  gap: 16px;
-  border-radius: 4px;
-  background: var(--iris, #4d5ae5);
-  color: var(--white, #fff);
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
   font-weight: 500px;
+  line-height: 1.5;
   letter-spacing: 0.04em;
+  padding: 8px 24px;
+  cursor: pointer;
+  background-color: #4d5ae5;
+  border: none;
+  border-radius: 4px;
+  color: var(--white, #fff);
 }
 .footer-icon-btn {
   margin-left: 16px;
