--- a/css/stylis.css
+++ b/css/stylis.css
@@ -537,14 +537,15 @@ ol {
   line-height: 1.5;
   letter-spacing: 0.04em;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  color: #ffffff;
 }
 .footer-input::placeholder {
-  color: var(--white, #fff);
+  color: #ffffff;
   font-size: 12px;
   line-height: 2;
   letter-spacing: 0.04em;
 }
-.footer-btn .btn {
+.footer-btn.btn {
   min-width: 165px;
   height: 40px;
   display: flex;
@@ -552,7 +553,7 @@ ol {
   align-items: center;
   font-family: "Roboto", sans-serif;
   font-size: 16px;
-  font-weight: 500px;
+  font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
   padding: 8px 24px;
@@ -560,10 +561,11 @@ ol {
   background-color: #4d5ae5;
   border: none;
   border-radius: 4px;
-  color: var(--white, #fff);
+  color: #ffffff;
 }
 .footer-icon-btn {
   margin-left: 16px;
+  color: #ffffff;
 }
 /*--------------------MODAL-----------------------*/
 
@@ -623,9 +625,11 @@ ol {
   visibility: hidden;
   pointer-events: none;
 }
-.modal-field {
+
+.modal-close-btn {
   margin-bottom: 8px;
 }
+
 .modal-title {
   color: var(--navyblue, #2e2f42);
   text-align: center;
@@ -638,16 +642,15 @@ ol {
 }
 .modal-input {
   width: 100%;
-  height: 58px;
+  height: 40px;
   background-color: transparent;
   border-radius: 4px;
-  border: 1px solid var(--navyblue-modal, rgba(46, 47, 66, 0.4));
-
+  border: 1px solid rgba(46, 47, 66, 0.4);
   padding-left: 38px;
   padding-right: 16px;
   font-size: 14px;
   outline: transparent;
-  transition: border-color 200ms ease;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-input:focus {
   border-color: #4d5ae5;
@@ -662,7 +665,10 @@ ol {
   border-width: 2px;
 }
 .modal-label {
-  font-size: 14px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
   margin-bottom: 4px;
   display: block;
 }
@@ -673,29 +679,36 @@ ol {
   fill: transparent;
   stroke: #2e2f42;
   position: absolute;
-  left: 8px;
+  left: 10px;
   top: 50%;
   transform: translateY(-50%);
-  transition: fill 200ms ease;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-comment {
   width: 100%;
   height: 120px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  border: 1px solid rgba(46, 47, 66, 0.4);
   background-color: transparent;
   border-radius: 4px;
-  border: 1px solid var(--navyblue-modal, rgba(46, 47, 66, 0.4));
   padding: 8px 16px;
-  font-size: 14px;
   outline: transparent;
-  transition: border-color 200ms ease;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   resize: none;
+  border-color: #4d5ae5;
+}
+.modal-field {
+  margin-bottom: 24px;
 }
 .modal-check-text {
   color: var(--lightslate, #8e8f99);
   /* Small Text */
   font-size: 12px;
   line-height: 1.17;
-  letter-spacing: 0.04;
+  letter-spacing: 0.04em;
   display: flex;
   align-items: center;
 }
@@ -709,36 +722,45 @@ ol {
 .modal-check-text span {
   width: 16px;
   height: 16px;
-  border-radius: 4px;
+  border-radius: 2px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   margin-right: 8px;
-  display: flex;
+  display: inline-flex;
   align-items: center;
   justify-content: center;
   fill: transparent;
-  transition-duration: 300ms;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-check:checked + .modal-check-text span {
-  background-color: #4d5ae5;
+  background-color: #404bbf;
   border: none;
-  fill: #ffffff;
+  fill: #f4f4fd;
 }
 .modal-check:focus + .modal-check-text span {
   border-color: #4d5ae5;
 }
 .modal-form-btn {
-  width: 169px;
+  min-width: 169px;
   height: 56px;
-  flex-shrink: 0;
+  font-family: "Roboto", sans-serif;
   border-radius: 4px;
   background: var(--dairy, #fcfcfc);
-  display: flex;
+  display: block;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04;
+  color: #ffffff;
   padding: 16px 32px;
+  border: none;
   align-items: center;
-  gap: 10px;
+  cursor: pointer;
   border-radius: 4px;
-  background: var(--iris, #4d5ae5);
+  background-color: #4d5ae5;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /***------------PORTFOLIO-------------*/
