--- a/css/stylis.css
+++ b/css/stylis.css
@@ -12,7 +12,7 @@
   --white: #ffffff;
   --dairy: #fcfcfc;
 }
-.body {
+body {
   font-family: "Raleway", sans-serif;
   font-family: "Roboto", sans-serif;
   background-color: var(--brand-color4);
@@ -46,7 +46,7 @@ ol {
   margin-top: 0;
   margin-bottom: 0;
 }
-.img {
+img {
   display: block;
 }
 .visually-hidden {
@@ -61,7 +61,7 @@ ol {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-.button {
+button {
   font-family: inherit;
   cursor: pointer;
 }
@@ -565,7 +565,7 @@ ol {
 }
 .footer-icon-btn {
   margin-left: 16px;
-  color: #ffffff;
+  fill: #ffffff;
 }
 /*--------------------MODAL-----------------------*/
 
@@ -626,11 +626,13 @@ ol {
   visibility: hidden;
   pointer-events: none;
 }
-
+.modal-icon-close {
+  position: absolute;
+  left: 8px;
+}
 .modal-close-btn {
   margin-bottom: 8px;
 }
-
 .modal-title {
   color: var(--navyblue, #2e2f42);
   text-align: center;
@@ -663,7 +665,6 @@ ol {
   font-size: 14px;
 }
 .modal-input:required {
-  border-width: 2px;
 }
 .modal-field {
   margin-bottom: 8px;
@@ -681,7 +682,6 @@ ol {
   margin-bottom: 16px;
 }
 .modal-icon {
-  fill: transparent;
   stroke: #2e2f42;
   position: absolute;
   left: 16px;
@@ -721,6 +721,7 @@ ol {
   font-size: 12px;
   line-height: 1.3;
   letter-spacing: 0.04;
+  margin-left: 16px;
 }
 .modal-check-text span {
   width: 16px;
@@ -758,8 +759,9 @@ ol {
   color: #ffffff;
   padding: 16px 32px;
   border: none;
+  margin: 0 auto;
   align-items: center;
-  cursor: pointer;
+  cursor: point-er;
   border-radius: 4px;
   background-color: #4d5ae5;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
