--- a/css/stylis.css
+++ b/css/stylis.css
@@ -630,8 +630,8 @@ button {
   position: absolute;
   left: 8px;
 }
-.modal-close-btn {
-  margin-bottom: 8px;
+.modal-close-btn {s
+  
 }
 .modal-title {
   color: var(--navyblue, #2e2f42);
@@ -689,6 +689,9 @@ button {
   transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.modal-close {
+  margin-bottom: 16px;
+}
 .modal-comment {
   width: 100%;
   height: 120px;
@@ -703,16 +706,16 @@ button {
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   resize: none;
-  border-color: #4d5ae5;
 }
-
+.modal-field-link {
+  margin-bottom: 24px;
+}
 .modal-check-text {
   color: var(--lightslate, #8e8f99);
   /* Small Text */
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
-  display: flex;
   align-items: center;
 }
 .modal-check-link {
